5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1679_1872.log
== TEST (2019-05-01 11:25:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x=float(input("Digite o valor de x: "))
y=float(input("Digite o valor de y: "))

if ((x == 0) and (y == 0)):
	print("Origem")
	elif(y == 0):print("Eixo X")
	elif (x == 0):print("Eixo Y")
	elif ((x > 0) and (y > 0)):
		print("Q1")
	elif ((x < 0) and (y > 0)):	
		print("Q2")
	elif ((x < 0) and (y < 0)):
		print("Q3")
	elif ((x > 0) and (y < 0)):
		print("Q4")
-- ERROR:
File "XXXX", line 8
    elif(y == 0):print("Eixo X")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:25:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x=float(input("Digite o valor de x: "))
y=float(input("Digite o valor de y: "))

if ((x == 0) and (y == 0)):
	print("Origem")
	elif(y == 0):
		print("Eixo X")
	elif (x == 0):
		print("Eixo Y")
	elif ((x > 0) and (y > 0)):
		print("Q1")
	elif ((x < 0) and (y > 0)):	
		print("Q2")
	elif ((x < 0) and (y < 0)):
		print("Q3")
	elif ((x > 0) and (y < 0)):
		print("Q4")
-- ERROR:
File "XXXX", line 8
    elif(y == 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:25:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x=float(input("Digite o valor de x: "))
y=float(input("Digite o valor de y: "))

if ((x == 0) and (y == 0)):
	print("Origem")
elif(y == 0):
		print("Eixo X")
elif (x == 0):
	print("Eixo Y")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x < 0) and (y > 0)):	
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x > 0) and (y < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:26:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x=float(input("Digite o valor de x: "))
y=float(input("Digite o valor de y: "))

if ((x == 0) and (y == 0)):
	print("Origem")
elif(y == 0):
		print("Eixo X")
elif (x == 0):
	print("Eixo Y")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x < 0) and (y > 0)):	
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x > 0) and (y < 0)):
	print("Q4")
-- EXECUTION TIME:
0.126075
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
